add dashboard count